tests/errors/init_state/ref_obligations/out_ref_read_before_write.sim
# Can't read through &out — pointee is Uninit at creation.
fn f(r: &out i64) {
  x: i64;
  entry:
    x = copy r.*;
    r.* = 42;
    return
}
