tests/errors/init_state/ref_obligations/out_ref_read_before_write.err.expected
error: at 5:5: [INIT-DerefPointeeStateMismatch] In function 'f', block 'entry': cannot read from pointee of 'r': pointee must be initialized here, but is uninitialized
   |
 5 |     x = copy r.*;
   |     ^^^^^^^^^^^^
